color de fondo y section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
         </main>
 
+        <section>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+
     </div>
 </body>
 </html>
