--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </main>
 
         <section>
-            <div></div>
-            <div></div>
+            <div><img src="" alt=""></div>
+            <div><p>Nuevo</p></div>
             <div></div>
             <div></div>
         </section>
